k8s/patient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-deployment
  labels:
    app: patient
spec:
  replicas: 2
  selector:
    matchLabels:
      app: patient
  template:
    metadata:
      labels:
        app: patient
    spec:
      containers:
        - name: patient
          image: 390844470549.dkr.ecr.ap-south-1.amazonaws.com/patient-service:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 8
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
